<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pseudo"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/editTextPseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrez_votre_pseudo"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ok" />

</LinearLayout>