<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

  <TextView
      android:id="@+id/textViewBienvenue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/vos_listes"
      android:textSize="20sp"
      android:paddingBottom="16dp"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewListes"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/newListEditText"
        android:hint="@string/nouvelle_liste"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonAjouterListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"/>

  </LinearLayout>


</LinearLayout>